# rsl-rl-mujoco-example

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
rsl_rl_mujoco/: env_wrapper.py  env_wrapper_eval.py  train.py  train.sh  visualize.py
rsl_rl_mujoco/Env/MFG_Musculoskelet_V7/: MFG_Raj2015_V7.xml  Rajgopal_fullbody_mesh.xml
rsl_rl_mujoco/Env/MFG_mocap/: SUBJECT01_steps.pkl  SUBJECT02_steps.pkl  SUBJECT03_steps.pkl  SUBJECT04_steps.pkl  SUBJECT05_steps.pkl  SUBJECT06_steps.pkl  SUBJECT07_steps.pkl  SUBJECT08_steps.pkl  SUBJECT09_steps.pkl  SUBJECT11_steps.pkl
rsl_rl_mujoco/Env/data_test/: data_generate.py
rsl_rl_mujoco/RL/algorithms/: distillation.py  ppo.py
rsl_rl_mujoco/RL/modules/: actor_critic.py  actor_critic_recurrent.py  rnd.py  student_teacher.py  student_teacher_recurrent.py
rsl_rl_mujoco/RL/networks/: discriminator.py  memory.py
rsl_rl_mujoco/RL/runners/: on_policy_runner.py
rsl_rl_mujoco/RL/storage/: rollout_storage.py
rsl_rl_mujoco/RL/utils/: __init__.py  dataload.py  utils.py  wandb_utils.py
rsl_rl_mujoco/configs/: default.yaml  visualize.yaml
rsl_rl_mujoco/model/0.3_3_4mlp/: visualize.yaml
rsl_rl_mujoco/model/0_0.26/: visualize.yaml
rsl_rl_mujoco/model/0_1-400/: visualize.yaml
rsl_rl_mujoco/model/1.2_1.3/: visualize.yaml
rsl_rl_mujoco/model/2.3_3/: visualize.yaml
rsl_rl_mujoco/model/mix_test1/: visualize.yaml
rsl_rl_mujoco/model/multi-200/: visualize.yaml
rsl_rl_mujoco/model/multi-400/: visualize.yaml
rsl_rl_mujoco/model/sigle_v7_best/: visualize.yaml
(+19 files in other folders)
