[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsl_rl_mujoco"
version = "0.1.0"
description = "RSL-RL with MuJoCo and Gymnasium Example"
requires-python = ">=3.8"
authors = [
    {name = "Giulio Romualdi", email = "giulio.romualdi@gmail.com"},
]
dependencies = [
    "gymnasium[mujoco]>=1.0.0",
    "mujoco>=2.3.3",
    "rsl-rl-lib>=1.0.0",
    "torch>=1.10.0",
    "pyyaml>=6.0",
    "tensorboard"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/GiulioRomualdi/rsl-rl-mujoco-example"